--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-	"name": "@chinvib66/product-info-scraper",
+	"name": "product-info-scraper",
 	"version": "1.0.0",
 	"description": "Product Info Scraper (Topcoder Challenge)",
 	"main": "src/index.js",
 	"bin": {
-		"@chinvib66/product-info-scraper": "bin/product-info-scraper",
 		"product-info-scraper": "bin/product-info-scraper"
 	},
 	"publishConfig": {
 		"access": "private"
 	},
 	"scripts": {
+		"postinstall": "npm link",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node src/index.js"
+		"start": "node --no-warnings src/index.js"
 	},
 	"author": "Chinmay Vibhute",
 	"license": "MIT",
@@ -21,18 +21,17 @@
 		"scraper",
 		"product info"
 	],
+	"preferGlobal": true,
 	"dependencies": {
-		"arg": "^4.1.3",
 		"axios": "^0.19.2",
-		"body-parser": "^1.19.0",
 		"cheerio": "^1.0.0-rc.3",
 		"clui": "^0.3.6",
+		"configstore": "^5.0.1",
+		"edit-json-file": "^1.4.0",
 		"esm": "^3.2.25",
-		"express": "^4.17.1",
 		"inquirer": "^7.0.4",
 		"mongoose": "^5.9.1",
-		"pug": "^2.0.4",
-		"rxjs": "^6.5.4"
+		"winston": "^3.2.1"
 	},
 	"devDependencies": {
 		"axios-https-proxy-fix": "^0.17.1",
