--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,18 +1,13 @@
 FROM node:12
-# Create app directory
 
-
-# ENV http_proxy http://172.16.2.30:8080/
-# ENV https_proxy http://172.16.2.30:8080/
+ENV NODE_NO_WARNING 1
 
 WORKDIR /usr/src/app
-# Install app dependencies
+
 COPY package.json /usr/src/app
 
-RUN npm install
-# Copy app source code
-COPY . /usr/src/app
-#Expose port? and start application
-# EXPOSE 8080
-CMD [ "npm", "start" ]
+RUN npm install 
 
+COPY . /usr/src/app
+
+CMD npm link && npm start 
