--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: "3"
-
 services: 
   cli:
+    container_name: product-info-scraper
     build: .
-    depends_on: 
+    links: 
       - mongo
   mongo:
+    container_name: mongo
     image: mongo
     ports: 
       - "27017:17017"
