--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
 		"access": "private"
 	},
 	"scripts": {
-		"postinstall": "npm link",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node --no-warnings src/index.js"
+		"start": "node src/index.js"
 	},
 	"author": "Chinmay Vibhute",
 	"license": "MIT",
@@ -26,15 +25,16 @@
 		"axios": "^0.19.2",
 		"cheerio": "^1.0.0-rc.3",
 		"clui": "^0.3.6",
-		"configstore": "^5.0.1",
 		"edit-json-file": "^1.4.0",
 		"esm": "^3.2.25",
 		"inquirer": "^7.0.4",
 		"mongoose": "^5.9.1",
+		"retry-axios": "^2.1.1",
 		"winston": "^3.2.1"
 	},
 	"devDependencies": {
 		"axios-https-proxy-fix": "^0.17.1",
+		"copy-paste": "^1.3.0",
 		"nodemon": "^2.0.2"
 	}
 }
